test/ui/src/compile_fail/std/dbg_props_non_debug.rs
struct Data {
    id: i32,
}

fn main() {
    emit::dbg!(a: Data { id: 42 });
}
